<resources>
    <string name="app_name">HomeWork9</string>
    <string name="reels">Reels</string>
    <string name="like_count">19.6k</string>
    <string name="comment_count">110</string>
    <string name="nick">awsm_jane</string>
    <string name="follow">Follow</string>
    <string name="music_text">Try at your own risk</string>
    <string name="description">Original music</string>
    <string name="settings">Settings</string>
    <string name="archive">Archive</string>
    <string name="history">Your activity</string>
    <string name="qr_code">QR code</string>
    <string name="save">Saved</string>
    <string name="bullet_list">Close Friends</string>
    <string name="person_add">Discover People</string>
    <string name="information">COVID-19 Information Center</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="authText">Авторизация</string>
    <string name="login">Почта или номер телефона</string>
    <string name="password">Пароль</string>
    <string name="btnLogin">Войти</string>
    <string name="searchText">Поиск</string>
    <string name="searchResult">Данные не найдены</string>
</resources>