<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3e3e3e"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:src="@drawable/settings" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:src="@drawable/archive" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/archive"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:src="@drawable/history" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:src="@drawable/qr_code" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/qr_code"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:src="@drawable/save" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:src="@drawable/bullet_list" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/bullet_list"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:src="@drawable/person_add" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/person_add"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@null"
            android:src="@drawable/information" />

        <TextView
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

</LinearLayout>