<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reels_background"
    tools:context=".ReelsFragment">

    <TextView
        android:id="@+id/reels"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:layout_marginTop="3dp"
        android:gravity="top"
        android:text="@string/reels"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <ImageButton
        android:id="@+id/camera"
        android:layout_width="29.53dp"
        android:layout_height="25dp"
        android:layout_marginTop="4.65dp"
        android:layout_marginEnd="2.73dp"
        android:background="@null"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <ImageButton
        android:id="@+id/like"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:src="@drawable/like"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@id/guideline_center_horizontal" />

    <TextView
        android:id="@+id/like_count"
        android:layout_width="50dp"
        android:layout_height="15dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/like_count"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/barrier_start_feedback"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_like" />

    <ImageButton
        android:id="@+id/comment"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:src="@drawable/comment"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_like" />

    <TextView
        android:id="@+id/comment_count"
        android:layout_width="50dp"
        android:layout_height="15dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/comment_count"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/barrier_start_feedback"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_comment" />

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="55dp"
        android:background="@null"
        android:src="@drawable/forward"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_comment" />

    <ImageButton
        android:id="@+id/more"
        android:layout_width="5dp"
        android:layout_height="18.55dp"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:src="@drawable/more"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/barrier_start_feedback"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom_comment" />

    <ImageView
        android:id="@+id/icon_user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="215dp"
        android:src="@drawable/icon_user"
        app:layout_constraintEnd_toStartOf="@id/nick"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/guideline_center_horizontal" />

    <TextView
        android:id="@+id/nick"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/nick"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/follow_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/icon_user"
        app:layout_constraintTop_toTopOf="@id/icon_user" />

    <ImageButton
        android:id="@+id/follow_button"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:background="@null"
        android:src="@drawable/follow"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/barrier_start_feedback"
        app:layout_constraintStart_toEndOf="@id/nick"
        app:layout_constraintTop_toTopOf="@id/icon_user" />

    <TextView
        android:id="@+id/follow_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/follow_button"
        app:layout_constraintEnd_toEndOf="@id/follow_button"
        app:layout_constraintStart_toStartOf="@id/follow_button"
        app:layout_constraintTop_toTopOf="@id/follow_button" />

    <TextView
        android:id="@+id/music_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/music_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/icon_music"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/icon_user" />

    <ImageView
        android:id="@+id/icon_music"
        android:layout_width="17dp"
        android:layout_height="20dp"
        android:src="@drawable/icon_music"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintStart_toStartOf="@id/music_text"
        app:layout_constraintTop_toBottomOf="@+id/music_text" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:gravity="top"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/icon_music"
        app:layout_constraintTop_toTopOf="@id/icon_music" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="23dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="47dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="31dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_start_feedback"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="start"
        app:constraint_referenced_ids="like" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom_like"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="like" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom_comment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="comment" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_feedback"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="like, like_count, comment, comment_count, forward, more" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="icon_user,nick, follow_button" />

</androidx.constraintlayout.widget.ConstraintLayout>